[gd_scene load_steps=18 format=3 uid="uid://qeqx5pcetu6n"]

[ext_resource type="Script" path="res://Scene/Map/2d/linesensor/LineSensor.gd" id="1_3ilyo"]
[ext_resource type="Texture2D" uid="uid://su70knjbgubp" path="res://Scene/Map/2d/linesensor/lineback.png" id="1_37hoe"]
[ext_resource type="Texture2D" uid="uid://ciejdf5mqp3qd" path="res://Scene/Map/2d/linesensor/Color/backgound.png" id="3_gsn5v"]
[ext_resource type="Texture2D" uid="uid://rfx586aqn5l1" path="res://Scene/Map/2d/linesensor/Color/ignore.png" id="4_u0cp4"]
[ext_resource type="Texture2D" uid="uid://cmk0b5aaanf6n" path="res://Scene/Map/2d/linesensor/Color/white.png" id="5_x0gnk"]
[ext_resource type="Texture2D" uid="uid://c4nuf5mm6bgoi" path="res://Scene/Map/2d/linesensor/Color/black.png" id="6_b2wry"]

[sub_resource type="ImageTexture" id="ImageTexture_dl1ht"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8egio"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e58r5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aimdx"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tevsu"]
texture = ExtResource("3_gsn5v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rko6m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xoamy"]
texture = ExtResource("3_gsn5v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_doidh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0umfy"]
texture = ExtResource("3_gsn5v")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c7yld"]

[sub_resource type="Theme" id="Theme_sqxag"]
OptionButton/icons/arrow = SubResource("ImageTexture_dl1ht")
OptionButton/styles/disabled = SubResource("StyleBoxEmpty_8egio")
OptionButton/styles/disabled_mirrored = SubResource("StyleBoxEmpty_e58r5")
OptionButton/styles/focus = SubResource("StyleBoxEmpty_aimdx")
OptionButton/styles/hover = SubResource("StyleBoxTexture_tevsu")
OptionButton/styles/hover_mirrored = SubResource("StyleBoxEmpty_rko6m")
OptionButton/styles/normal = SubResource("StyleBoxTexture_xoamy")
OptionButton/styles/normal_mirrored = SubResource("StyleBoxEmpty_doidh")
OptionButton/styles/pressed = SubResource("StyleBoxTexture_0umfy")
OptionButton/styles/pressed_mirrored = SubResource("StyleBoxEmpty_c7yld")

[node name="LineSensor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ilyo")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_37hoe")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_top = 41.0
offset_bottom = 41.0
theme_override_constants/separation = 45

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="l3" type="OptionButton" parent="HBoxContainer/Control"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="l2" type="OptionButton" parent="HBoxContainer/Control2"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="l1" type="OptionButton" parent="HBoxContainer/Control3"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[node name="Control4" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="r1" type="OptionButton" parent="HBoxContainer/Control4"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[node name="Control5" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="r2" type="OptionButton" parent="HBoxContainer/Control5"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[node name="Control6" type="Control" parent="HBoxContainer"]
layout_mode = 2

[node name="r3" type="OptionButton" parent="HBoxContainer/Control6"]
layout_mode = 2
offset_right = 45.0
offset_bottom = 25.0
scale = Vector2(0.95999, 1)
theme = SubResource("Theme_sqxag")
alignment = 1
icon_alignment = 1
expand_icon = true
item_count = 3
selected = 2
popup/item_0/text = ""
popup/item_0/icon = ExtResource("6_b2wry")
popup/item_0/id = 0
popup/item_1/text = ""
popup/item_1/icon = ExtResource("5_x0gnk")
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/icon = ExtResource("4_u0cp4")
popup/item_2/id = 2

[connection signal="item_selected" from="HBoxContainer/Control/l3" to="." method="_on_l_3_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Control2/l2" to="." method="_on_l_2_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Control3/l1" to="." method="_on_l_1_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Control4/r1" to="." method="_on_r_1_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Control5/r2" to="." method="_on_r_2_item_selected"]
[connection signal="item_selected" from="HBoxContainer/Control6/r3" to="." method="_on_r_3_item_selected"]
